--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
     <footer>
       <button class="b1">Previous</button>
-      <a href="file:///C:/Users/loren/prog%20web/pagina%20final/index2.html">
+      <a href="./index2.html">
         Next >>
       </a>
     </footer>
