--- a/index2.html
+++ b/index2.html
@@ -167,12 +167,12 @@
 
   <footer>
     <a
-      href="file:///C:/Users/loren/prog%20web/pagina%20final/index.html"
+      href="./index.html"
       class="hrefooter"
       >Previous</a
     >
     <a
-      href="file:///C:/Users/loren/prog%20web/pagina%20final/index3.html"
+      href="./index3.html"
       class="hrefooter"
     >
       Oportunities
