--- a/index3.html
+++ b/index3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style3.css" />
-    <script src="./tres.js" defer></script>
+    <script src="./app.js" defer></script>
   </head>
   <body>
     <h1>Black Friday :</h1>
