--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="producto-inferior">
             <img
               src="https://http2.mlstatic.com/D_NQ_NP_624305-MLA20849066908_082016-O.jpg"
-              style="width: 100%"
+              class="imagen-inf"
             />
             <div class="Descripcion-producto">
               <h3>CLASSIC NEVERLEAK TM MUG VERDE 591ML</h3>
