--- a/index.html
+++ b/index.html
@@ -205,10 +205,14 @@
                   class="estilo-links-con-tu-stanley"
                   >Naturaleza</a
                 >
-                <a href="http://www.amazonatours.com/" class="estilo-links-con-tu-stanley"
+                <a
+                  href="http://www.amazonatours.com/"
+                  class="estilo-links-con-tu-stanley"
                   >Selva</a
                 >
-                <a href="https://www.cerrocastor.com/" class="estilo-links-con-tu-stanley"
+                <a
+                  href="https://www.cerrocastor.com/"
+                  class="estilo-links-con-tu-stanley"
                   >Nieve</a
                 >
               </p>
@@ -221,9 +225,7 @@
 
     <footer>
       <button class="boton-next">Previous</button>
-      <a href="./index2.html">
-        Next >>
-      </a>
+      <a href="./index2.html"> Next >> </a>
     </footer>
   </body>
 </html>
